--- a/coffee-shop/style.css
+++ b/coffee-shop/style.css
@@ -372,60 +372,71 @@ section {
     font-weight: lighter;
     font-size: 1.5rem;
 }
-.review .box-container{
-      display: grid;
+
+.review .box-container {
+    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     gap: 1.5rem;
 }
-.review .box-container .box{
+
+.review .box-container .box {
     border: var(--border);
     text-align: center;
     padding: 3rem 2rem;
 }
-.review .box-container .box p{
+
+.review .box-container .box p {
     font-size: 1.5rem;
     line-height: 1.8;
     color: #ccc;
     padding: 2rem 0;
 }
-.review .box-container .box .user{
+
+.review .box-container .box .user {
     height: 7rem;
     width: 7rem;
     border-radius: 50%;
     object-fit: cover;
 }
-.review .box-container .box h3{
+
+.review .box-container .box h3 {
     padding: 1rem 0;
     font-size: 2rem;
     color: #fff;
 }
-.review .box-container .box .stars i{
+
+.review .box-container .box .stars i {
     font-size: 1.5rem;
     color: var(--main-color);
 }
-.contact .row{
-    display:flex ;
+
+.contact .row {
+    display: flex;
     /* align-items: center; */
     background: var(--black);
-    flex-wrap:wrap ;
+    flex-wrap: wrap;
     gap: 1rem;
 }
-.contact .row .map{
+
+.contact .row .map {
     flex: 1 1 45rem;
     width: 100%;
     object-fit: cover;
 }
-.contact .row form{
+
+.contact .row form {
     flex: 1 1 45rem;
     padding: 5rem 2rem;
     text-align: center;
 }
-.contact .row form h3{
+
+.contact .row form h3 {
     text-transform: uppercase;
     font-size: 3.5rem;
     color: #fff;
 }
-.contact .row form .inputBox{
+
+.contact .row form .inputBox {
     display: flex;
     align-items: center;
     margin-top: 2rem;
@@ -433,12 +444,14 @@ section {
     background: var(--bg);
     border: var(--border);
 }
-.contact .row form .inputBox span{
-color: #fff;
-font-size: 2rem;
-padding-left: 2rem;
+
+.contact .row form .inputBox span {
+    color: #fff;
+    font-size: 2rem;
+    padding-left: 2rem;
 }
-.contact .row form .inputBox input{
+
+.contact .row form .inputBox input {
     width: 100%;
     padding: 2rem;
     font-size: 1.7rem;
@@ -447,14 +460,99 @@ padding-left: 2rem;
     background: none;
 }
 
+.blog .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 1.5rem;
+}
 
+.blog .box-container .box {
+    border: var(--border);
+}
 
+.blog .box-container .box .image {
+    height: 25rem;
+    overflow: hidden;
+    width: 100%;
+}
 
+.blog .box-container .box .image img{
+    height: 100%;
+    object-fit: cover;
+    width: 100%;
+}
+.blog .box-container .box:hover .image img {
+    transform: scale(1.2);
+}
+.blog .box-container .box .content{
+    padding: 2rem;
+}
+.blog .box-container .box .content .title{
+font-size: 2.5rem;
+line-height: 1.5;
+color: #fff;
+}
+.blog .box-container .box .content .title:hover{
+    color: var(--main-color);
+}
+.blog .box-container .box .content span{
+    color:var(--main-color) ;
+    display:block;
+    padding-top: 1rem;
+    font-size: 2rem;
+}
+.blog .box-container .box .content p{
+    font-size: 1.6rem;
+    line-height: 1.8;
+    color: #ccc;
+    padding: 1rem 0;
+}
+.footer{
+    background: var(--black);
+    text-align: center;
+}
+.footer .share{
+    padding: 1rem 0;
+}
+.footer .share a{
+height:5rem;
+width: 5rem;
+line-height: 5rem;
+font-size: 2rem;
+color: #fff;
+border: var(--border);
+margin: .3rem;
+border-radius: 50%;
+}
+.footer .share a:hover{
+    background-color: var(--main-color);
+}
+.footer .links{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 2rem 0;
+    gap: 1rem;
+}
+.footer .links a{
+    padding: .7rem 2rem;
+    color: #fff;
+    border: var(--border);
+    font-size: 2rem;
+}
+.footer .links a:hover{
+    background: var(--main-color);
+}
+.footer .credit{
+    font-size: 2rem;
+    color: #fff;
+    font-weight: lighter;
+    padding: 1.5rem;
+}
 
-
-
-
-
+.footer .credit span{
+    color: var(--main-color);
+}
 
 
 
