--- a/coffee-shop/style.css
+++ b/coffee-shop/style.css
@@ -215,8 +215,9 @@ section {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background: url(./image4.png) no-repeat;
+    background: url(./image2.png) no-repeat;
     background-position: center;
+    background-size: cover;
 }
 
 .home .content {
