--- a/food/style.css
+++ b/food/style.css
@@ -1,41 +1,52 @@
-*,::after,::before{
+*,
+::after,
+::before {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-body{
+
+body {
     margin: 0 100px;
     background-color: #ffeae0;
 }
-.nav{
+
+.nav {
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 30px 0;
 }
-.nav .logo h1{
+
+.nav .logo h1 {
     font-weight: 600;
     font-family: sans-serif;
     color: black;
 }
-.nav .logo b{
+
+.nav .logo b {
     color: #ff511c;
 }
-.nav ul{
-    display: flex;list-style: none;
+
+.nav ul {
+    display: flex;
+    list-style: none;
 }
-.nav ul li{
+
+.nav ul li {
     margin-right: 30px;
 }
-.nav ul li a{
+
+.nav ul li a {
     text-decoration: none;
     color: black;
     font-weight: 500;
     font-family: sans-serif;
     font-size: 17px;
 }
-.nav ul .active::after{
+
+.nav ul .active::after {
     content: '';
     width: 50%;
     height: 3px;
@@ -44,23 +55,27 @@ body{
     position: relative;
     margin-left: 10px;
 }
-input{
+
+input {
     padding: 10px 20px;
     cursor: pointer;
     font-weight: 600;
 }
-.singin{
+
+.singin {
     background-color: transparent;
     border: none;
 }
-.singup{
+
+.singup {
     background-color: #ff511c;
     color: #ffffff;
     outline: none;
     border: none;
     border-radius: 5px;
 }
-.content{
+
+.content {
     display: grid;
     grid-template-columns: 50% auto;
     gap: 30px;
@@ -69,27 +84,32 @@ input{
     justify-content: space-between;
     width: 100%;
 }
-.content .content-left{
+
+.content .content-left {
     display: block;
     width: 100%;
 }
-.content .content-left .info{
+
+.content .content-left .info {
     max-width: 100%;
     display: flex;
     flex-direction: column;
 }
-.content .content-left .info h2{
+
+.content .content-left .info h2 {
     font-size: 60px;
     font-family: sans-serif;
     margin-bottom: 30px;
 }
-.content .content-left .info p{
+
+.content .content-left .info p {
     font-size: 20px;
     line-height: 2pc;
     margin-bottom: 30px;
     font-family: sans-serif;
 }
-.content .content-left button{
+
+.content .content-left button {
     padding: 20px 23px;
     background-color: #ff511c;
     color: #ffffff;
@@ -97,48 +117,56 @@ input{
     border: none;
     cursor: pointer;
 }
-.content .content-right{
+
+.content .content-right {
     display: block;
     width: 100%;
 }
-.content .content-right img{
+
+.content .content-right img {
     width: 400;
     height: auto;
     position: relative;
     user-select: none;
     animation: rotate 10s linear infinite;
 }
-@keyframes rotate{
-    0%{
+
+@keyframes rotate {
+    0% {
         transform: rotate(0deg);
     }
-    100%{
+
+    100% {
         transform: rotate(360deg);
     }
 }
 
-.category{
+.category {
     width: 100%;
     display: flex;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
     justify-content: center;
 }
-.category .list-item{
+
+.category .list-item {
     width: 90%;
     position: relative;
-    margin-top: 100px;
+    margin-top: 50px;
 }
-.category .list-item h3{
+
+.category .list-item h3 {
     font-size: 20px;
     font-weight: 600;
     font-family: sans-serif;
     margin-bottom: 70px;
 }
-.category .list-item .card-list{
+
+.category .list-item .card-list {
     display: grid;
-    grid-template-columns:repeat(4, 1fr);
+    grid-template-columns: repeat(4, 1fr);
 }
-.category .card-list .card{
+
+.category .card-list .card {
     width: 200px;
     height: auto;
     display: block;
@@ -148,7 +176,8 @@ input{
     background: #ffffff;
     outline: 2px solid #faad96;
 }
-.category .card-list .card img{
+
+.category .card-list .card img {
     width: 100px;
     height: auto;
     bottom: 140px;
@@ -157,9 +186,43 @@ input{
     object-position: center;
     background-repeat: no-repeat;
     position: absolute;
-    box-shadow:  0 20px 20px #faad96;
+    box-shadow: 0 20px 20px #faad96;
     border-radius: 50%;
 }
-.category .card-list .card .food-title{
+
+.category .card-list .card .food-title {
     padding: 40px 0 10px;
 }
+.category .card-list .card .food-title h1{
+    text-align: center;
+    font-weight: bold;
+    font-size: 16px;
+    font-family:sans-serif;
+
+}
+.category .card .desc-food p{
+font-size: 13px;
+text-align: center;
+font-weight: 500;
+margin-bottom: 20px;
+font-family: sans-serif;
+}
+.category .card .price{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.category .card .price span .plus-icon{
+color: #ff511c;
+font-size: 20px;
+cursor: pointer;
+}
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb{
+    border-radius: 20px;
+    background-color: #ff511c;
+}
+
